# ad-part

./: .gitignore  CMakeLists.txt  MG5_aMC  README.md  onnxruntime
config/: JetClass_ntuple.yaml
example/njets/diagrams/: diagrams_1_gg_gg.eps  diagrams_1_gg_uux.eps  diagrams_1_gu_gu.eps  diagrams_1_gux_gux.eps  diagrams_1_uc_uc.eps  diagrams_1_ucx_ucx.eps  diagrams_1_uu_uu.eps  diagrams_1_uux_ccx.eps  diagrams_1_uux_gg.eps  diagrams_1_uux_uux.eps  diagrams_1_uxcx_uxcx.eps  diagrams_1_uxux_uxux.eps  diagrams_2_gg_ggg.eps  diagrams_2_gg_guux.eps  diagrams_2_gu_ggu.eps  diagrams_2_gu_uccx.eps  diagrams_2_gu_uuux.eps  diagrams_2_gux_cuxcx.eps  diagrams_2_gux_ggux.eps  diagrams_2_gux_uuxux.eps  diagrams_2_uc_guc.eps  diagrams_2_ucx_gucx.eps  diagrams_2_uu_guu.eps  diagrams_2_uux_gccx.eps  diagrams_2_uux_ggg.eps  diagrams_2_uux_guux.eps  diagrams_2_uxcx_guxcx.eps  diagrams_2_uxux_guxux.eps  diagrams_3_ccx_ucuxcx.eps  diagrams_3_ddx_ucuxcx.eps  diagrams_3_gg_gggg.eps  diagrams_3_gg_gguux.eps  diagrams_3_gg_ucuxcx.eps  diagrams_3_gg_uuuxux.eps  diagrams_3_gu_gggu.eps  diagrams_3_gu_guccx.eps  diagrams_3_gu_guuux.eps  diagrams_3_gux_gcuxcx.eps  diagrams_3_gux_gggux.eps  diagrams_3_gux_guuxux.eps  (+25 more)
example/stop2b1000_neutralino300/diagrams/: diagrams_1_bbx_t1t1x.eps  diagrams_1_gg_t1t1x.eps  diagrams_1_uux_t1t1x.eps
include/: adbranch.h  addef.h  adecf.h  adenv.h  adfs.h  adgnmch.h  adjet.h  adliteral.h  adliteral_internal.h  admem.h  adnbranch.h  adonnx.h  adpdg.h  adrunner.h  adsamp.h  adtensor.h  adtype.h
mc/: .gitignore  run.sh
mc/gamjets/: run.sh
mc/zjets/: run.sh
run/: .gitignore
run/delphes_gamjets/: run-all.sh  run-cmp.sh  run-flatten-legacy.sh  run-flatten.sh  run-ntuple.sh  run-partgpu.sh  run-weaver.sh
run/delphes_njets/: run-cmp.sh  run-flatten.sh  run-ntuple.sh  run-partgpu.sh  run-weaver.sh
run/delphes_stop2b1000_neutralino300/: run-cmp.sh  run-flatten-legacy.sh  run-flatten.sh  run-ntuple.sh  run-partgpu.sh  run-weaver.sh
run/delphes_wjets/: run-cmp.sh  run-flatten-legacy.sh  run-flatten.sh  run-ntuple.sh  run-partgpu.sh  run-weaver.sh
run/delphes_zjets/: run-cmp.sh  run-flatten-legacy.sh  run-flatten.sh  run-ntuple.sh  run-partgpu.sh  run-weaver.sh
run/hid/: train.sh
run/jet/: train.sh
run/part/: train.sh
run/raw/: train.sh
run/sm/: .gitignore  README.txt  remote_run.sh  remote_run.txt  run_flatten.sh  run_mkroot4.sh  run_part.sh  run_sample.sh  run_sample4.sh  test_run_flatten.sh  test_run_part.sh
run/sm/samples/: DiHiggsTo4B  QCD  QCD_LG  SingleHiggs  SingleHiggsToBB  SingleTop  TTbar  TTbarH  TTbarW  TTbarZ  TW  TZ  WH  WJetsToLNu  WJetsToQQ  WW  ZH  ZJetsToLL  ZJetsToNuNu  ZJetsToQQ  ZW  ZZ
src/: README.md  adbranch.cpp  addef.cpp  adecf.cpp  adenv.cpp  adfs.cpp  adgnmch.cpp  adjet-io.cpp  adjet-phy.cpp  adjet.cpp  admem.cpp  adnbranch.cpp  adpdg.cpp  adrunner.cpp  adsamp.cpp  adtensor.cpp  delphes-split.cpp  delphes-test.cpp  ecf-test.cpp  flatten-with-label.cpp  flatten-without-label.cpp  flatten.cpp  mkroot.cpp  ntuple.cpp  onnx-test-gpu.cpp  onnx-test.cpp  part-gpu.cpp  part.cpp  root-test.cpp  samp-test-2.cpp  samp-test.cpp  sample.cpp  sample4.cpp  sanitizer-test.cpp
src/python3/: adjet.py  little.py  npgz.py  tiny.py
